# PropertiesManager

./: .cproject  .gitignore  .project  CMakeLists.txt
include/: Properties.hpp  Property.hpp
res/testdata/: testdata.properties
src/: Properties.cpp  Property.cpp
test/src/: GetNumberTests.cpp  TestAll.cpp
